# agent-project-recovery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  design-evolution.md  pitfalls.md
examples/: __init__.py  hermes_integration.py  standalone_usage.py
src/agent_recovery/: __init__.py  cli.py  core.py  hooks.py  version.py
tests/: __init__.py  test_core.py
