[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-project-recovery"
version = "1.0.0"
description = "Lightweight state persistence for AI agents - save project state before interruption, restore instantly on resume"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "yangchiniu", email = "yangchiniu@example.com" },
]
keywords = ["ai-agent", "state-management", "project-recovery", "context-persistence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
hermes-recover = "agent_recovery.cli:main"

[project.urls]
Homepage = "https://github.com/yangchiniu/agent-project-recovery"
Documentation = "https://github.com/yangchiniu/agent-project-recovery#readme"
Repository = "https://github.com/yangchiniu/agent-project-recovery"
Issues = "https://github.com/yangchiniu/agent-project-recovery/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_recovery"]
